--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -39,15 +39,9 @@
                     
 				</Grid.RowDefinitions>
 
-				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add a Task</TextBlock>				
-				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkParaffinCurlPreparation_Click">Paraffin Curl Preparation</Hyperlink>
-				</TextBlock>				
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkMicrodissectionForMolecular_Click">Microdissection For Molecular</Hyperlink>
-				</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkSendBlockToNeogenomics_Click">Send block to Neogenomics</Hyperlink>
+                <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>								
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
+                    <Hyperlink Click="HyperLinkSendToNeogenomics_Click">Send to Neogenomics</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5" VerticalAlignment="Bottom">
                     <Hyperlink Click="HyperlingPrintTaskOrder_Click">Print (1 copy)</Hyperlink>
